--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div id="app" v-bind:style="{ background: '#' + color }">
-    <coin-detail
-      v-on:change-color="updateColor"
-      v-bind:coin="btc">
 
+  
+  <div id="app">
+    <img v-bind:src="img" v-bind:alt="name">
+      <h1>
+        {{ name }}
+        <span v-if="changePercent > 0">👍</span>
+        <span v-else-if="changePercent < 0">😒</span>
+        <span v-else>🤞</span>
 
-      <template v-slot:text>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Velit, aperiam? Non dignissimos nam, voluptatem ducimus eos, pariatur dolor quisquam at asperiores praesentium molestias recusandae cum inventore, omnis consequatur? Voluptate, quo?</p>
-      </template>
+        <span v-show="changePercent > 0">👍</span>
+        <span v-show="changePercent < 0">😒</span>
+        <span v-show="changePercent === 0">🤞</span>
 
-      <template v-slot:link>
-        <a href="#">Link!</a>
-      </template>
-    </coin-detail>
-
+      </h1>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
