--- a/index.html
+++ b/index.html
@@ -9,36 +9,19 @@
   </head>
   <body>
     <div id="app" v-bind:style="{background: '#' + color}">
-      <img
-        v-on:mouseover="toggleShowPrices"
-        v-on:mouseout="toggleShowPrices"
-        v-bind:src="img"
-        v-bind:alt="name"
-      />
-
-      <h1 v-bind:class="changePercent > 0 ? 'green' : 'red'">
-        {{ title }}
-        <span v-if="changePercent > 0">👍</span>
-        <span v-else-if="changePercent < 0">😒</span>
-        <span v-else>🤞</span>
-        <span v-on:click="toggleShowPrices">
-          {{ showPrices ? '🙈' : '🙊' }}
-        </span>
-      </h1>
-
-      <input type="number" v-model="value">
-      <span>{{ convertedValue }}</span>
-
-      <ul v-show="showPrices">
-        <li
-          class="uppercase"
-          v-bind:class="{ orange: p.value === price, red: p.value < price, green: p.value > price }"
-          v-for="(p, index) in pricesWithDays"
-          v-bind:key="price.day"
-        >
-          {{index}} - {{p.day}} - {{p.value}}
-        </li>
-      </ul>
+      <coin-detail v-on:change-color="updateColor" v-bind:coin="btc">
+        <template v-slot:text>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo eaque
+            quis omnis iure reiciendis, cupiditate commodi impedit, itaque,
+            dolores consequatur distinctio odit illum amet ad? Suscipit impedit
+            praesentium veritatis tenetur!
+          </p>
+        </template>
+        <template v-slot:link>
+          <a href="#">Link!</a>
+        </template>
+      </coin-detail>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
